--- a/Medical/client/package.json
+++ b/Medical/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ipfs-api": "^26.1.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.1",
+    "truffle-contract": "^4.0.14",
+    "truffle-hdwallet-provider": "^1.0.8",
     "web3": "^1.0.0-beta.37"
   },
   "scripts": {
