--- a/Medical/client/package.json
+++ b/Medical/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "any-promise": "^1.3.0",
+    "bindings": "^1.5.0",
     "ipfs-api": "^26.1.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
